Add routing to home and signin page.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
-    <title>Farmers Market App</title>
+
+    <title>Ok Cupid</title>
   </head>
   <body>
     <div id="react-app-root">
